# MSD23-24

./: .gitignore  .gitmodules  README.md  arduino_movement.ino
eagle_pcb/projects/RFID_Reader/: CE201210-R47J.lbr  CS11337-27.12M.lbr  E3SB27E0X000VE.lbr  MFRC630.lbr  NX3L4051PW,118.lbr  RFID_Reader_v0.1.brd  RFID_Reader_v0.1.sch  RFID_Reader_v1.0.brd  RFID_Reader_v1.0.sch  SMD_Components.lbr  eagle.epf  mfrc522.lbr
src/: CMakeLists.txt  Makefile  README.md  lcd_patch.patch  suppress_stockfish_info.patch
src/include/: Adafruit_MFRC630.h  Adafruit_MFRC630_regs.h  board_defs.h  chess.h  lcd_i2c.h  main.h  pi5_gpio.h  pi_gpio.h  pi_i2c.h  pi_rfid.h  pi_spi.h  stepper.h
src/lib/: Adafruit_MFRC630.cpp  Adafruit_MFRC630_consts.c  CMakeLists.txt  chess.c  chess.cpp  lcd_i2c.c  main.c  main.cpp  pi5_gpio.c  pi_gpio.c  pi_i2c.c  pi_rfid.c  pi_rfid.cpp  pi_spi.c  stepper.c
